# bbt

./: .env.example  .gitignore  HACKATHON_PDN_ANALYSIS.md  HACKATHON_SOLUTION_PLAN.md  PROJECT_STRUCTURE_FOR_DEFENSE.md  README.md  SUBMISSION.md  candidate_submission_review.csv  candidate_submission_review_wide.csv  pyproject.toml  requirements.txt  result.csv  test.ipynb  watch.md  watch_candidates.md
configs/: default.yaml  fast.yaml  hybrid_aggressive.yaml  hybrid_conservative.yaml  ocr.yaml
configs/shortlists/: hybrid_aggressive.txt  hybrid_conservative.txt
docs/: HACKATHON_CASE.md  HACKATHON_PDN_ANALYSIS.md  HACKATHON_SOLUTION_PLAN.md  architecture.md  roadmap.md
docs/codex/: PDF_PROMPT_HANDOFF.md  PLAYBOOK.md  START_HERE.md  STATE.md
src/pdn_scanner/: cli.py  config.py  enums.py  models.py
status/: CHANGELOG.md  IMPLEMENTATION_STATUS.md  VERSION.md
submission_probes/: README.txt  probe_01_card_issue_form.csv  probe_02_document_checklist.csv  probe_03_applicant_consent_spd.csv  probe_04_blank_statement.csv  probe_05_contest_consent.csv  probe_06_guardian_consent.csv  probe_07_checklist_plus_spd.csv  probe_08_consents_only.csv  probe_09_review_no_card.csv  probe_10_wide_noise_check.csv
tests/integration/: test_cli_smoke.py
tests/unit/: test_cross_file_promotion.py  test_detectors.py  test_docx_extractor.py  test_image_extractor.py  test_inn.py  test_legacy_extractors.py  test_luhn.py  test_ocr_shortlist.py  test_parquet_extractor.py  test_pdf_extractor.py  (+3 more)
tools/: build_probe_submissions.py  build_shortlist_corpus.py  make_hybrid_submission.py
(+60 files in other folders)
